--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,43 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+.App {
+    transition: background 0.5s ease-out;
+    padding: 10px;
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.audioSelector {
+  width: 50%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.audioSelector > div {
+  transition: background 0.3s linear;
+  cursor: pointer;
+  width: 80px;
+  height: 20px;
+  background: rgba(0, 0, 0, 0.3);
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.audioSelector > div:hover{
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.selected{
+  border: 1px solid black !important;
+  background: rgba(239, 255, 10, 0.4) !important;
 }
