--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    box-sizing: border-box;
 }
 
 code {
