--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1{
+  font-size: 80px;
+  margin: 20px;
+}
 
 .App {
     transition: background 0.5s ease-out;
