--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,21 @@ code {
   border: 1px solid black !important;
   background: rgba(180, 180, 180, 0.4) !important;
 }
+
+.timer{
+  margin: 20px;
+}
+
+.timer > div{
+  color: white;
+  text-shadow: 2px 2px #000000;
+  font-size: 30px;
+  font-weight: 800;
+  cursor: pointer;
+  transition: all 0.1s linear;
+}
+
+.selectedTimer{
+  color: rgb(255, 244, 87) !important;
+  font-size: 50px !important;
+}
